CostalCloud/force-app/main/default/objects/Job_SKU__c.object
<CustomObject>
    <label>Job SKU</label>
    <nameField>
        <label>Job SKU #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job SKU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>