CostalCloud/force-app/main/default/objects/Job_SKU__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>THD</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
            <value>
                <fullName>STC</fullName>
            </value>
            <value>
                <fullName>HDS</fullName>
            </value>
            <value>
                <fullName>HDIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>