CostalCloud/force-app/main/default/objects/Job_SKU__c/fields/Intacct_Code__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Code__c</fullName>
    <label>Intacct Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>