CostalCloud/force-app/main/default/objects/Job_SKU__c/fields/Job_SKU__c.field-meta.xml
<CustomField>
    <fullName>Job_SKU__c</fullName>
    <externalId>true</externalId>
    <label>Unique Job SKU #</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>