CostalCloud/force-app/main/default/objects/Job_SKU__c/fields/Job_SKU_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Job_SKU_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job SKU ID(18)</label>
    <type>Text</type>
</CustomField>