CostalCloud/force-app/main/default/objects/Job_SKU__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ONLY populate for kitchen exceptions such as Electrical or Plumbing Installs</inlineHelpText>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Job SKU</relationshipLabel>
    <relationshipName>Job_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>