CostalCloud/force-app/main/default/objects/Job_SKU__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ONLY enter a value for exception items such as electric and plumbing.  For all others leave blank!</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Job SKU</relationshipLabel>
    <relationshipName>Job_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>