CostalCloud/force-app/main/default/objects/Job_SKU__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Program__c</columns>
    <columns>Job_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>