CostalCloud/force-app/main/default/objects/Job_SKU__c/listViews/Kitchen.listView-meta.xml
<ListView>
    <fullName>Kitchen</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Program__c</columns>
    <columns>Job_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Kitchens</value>
    </filters>
    <label>Kitchen</label>
</ListView>