CostalCloud/force-app/main/default/objects/Job_SKU__c/listViews/TCS.listView-meta.xml
<ListView>
    <fullName>TCS</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Program__c</columns>
    <columns>Job_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>TCS</value>
    </filters>
    <label>TCS</label>
</ListView>